Topic & Template Fixes (#1356)
* Bug fixes, topics and templates

* Ensure topic dropdown never overflows, edit button always visible

* Ensure stagebar buttons never overflow

* Better error catching and rendering on frontend

--- a/client/styles/modals/edit_topic_modal.scss
+++ b/client/styles/modals/edit_topic_modal.scss
@@ -2,4 +2,8 @@
 
 .EditTopicModal {
     max-width: 680px;
+    .error-message {
+        @include error-text();
+        margin-top: 20px;
+    }
 }
